# rsa-vision-networks

./: .gitignore  LICENSE  README.md  pyproject.toml
models/checkpoints/: lenet_fashionmnist.pt
models/lenet_fashionmnist_basic/: config.yaml
notebooks/: 0.0-mt-misc.ipynb  0.1-mt-misc.ipynb  0.2-mt-misc.ipynb  1.0-mt-basic-training-routine.ipynb  1.0-mt-proof-of-concept.ipynb  1.1-mt-basic-training-routine.ipynb  2.0-mt-parsing-tensorboard-data.ipynb  3.0-mt-pre-trained-weights.ipynb  4.0-mt-data-analysis-lenet-fashionmnist.ipynb  4.1-mt-data-analysis-lenet-fashionmnist.ipynb  4.10-mt-data-analysis-lenet-fashionmnist.ipynb  4.12-mt-data-analysis-lenet-fashionmnist.ipynb  4.2-mt-data-analysis-lenet-fashionmnist.ipynb  4.3-mt-data-analysis-lenet-fashionmnist.ipynb  4.4-mt-data-analysis-lenet-fashionmnist.ipynb  4.5-mt-data-analysis-lenet-fashionmnist.ipynb  4.7-mt-data-analysis-lenet-fashionmnist.ipynb  4.8-mt-data-analysis-lenet-fashionmnist.ipynb  4.9-mt-data-analysis-lenet-fashionmnist.ipynb  5.0-mt-rsa-lenet-fashionmnist.ipynb  5.1-mt-rsa-lenet-fashionmnist.ipynb  5.4-mt-rsa-lenet-fashionmnist.ipynb  6.0-mt-differentiable-spearman.ipynb  6.1-mt-differentiable-spearman.ipynb  6.2-mt-differentiable-spearman.ipynb  6.3-mt-differentiable-spearman.ipynb  7.0-mt-rsa-modified-lenet-fashionmnist.ipynb  7.1-mt-rsa-modified-lenet-fashionmnist.ipynb  8.0-mt-optuna-studies.ipynb  9.0-mt-analyzing-results-main-experiments.ipynb  9.1-mt-analyzing-results-main-experiments.ipynb  9.2-mt-analyzing-results-main-experiments.ipynb
notebooks/hist/: 0.0-mt-misc.ipynb  4.1-mt-data-analysis-lenet-fashionmnist.ipynb  4.10-mt-data-analysis-lenet-fashionmnist.ipynb  4.11-mt-data-analysis-lenet-fashionmnist.ipynb  4.2-mt-data-analysis-lenet-fashionmnist.ipynb  4.3-mt-data-analysis-lenet-fashionmnist.ipynb  4.6-mt-data-analysis-lenet-fashionmnist.ipynb  5.0-mt-rsa-lenet-fashionmnist.ipynb  5.2-mt-rsa-lenet-fashionmnist.ipynb  5.3-mt-rsa-lenet-fashionmnist.ipynb  6.1-mt-differentiable-spearman.ipynb  6.2-mt-differentiable-spearman.ipynb  7.0-mt-rsa-modified-lenet-fashionmnist.ipynb
src/: README.md  compute_dataset_stats.py  config.py  cross_validate_classifier.py  main.py  test_classifier.py  train.py  train_classifier.py  train_classifier_cv.py  train_classifier_optuna.py  train_similarity.py  train_similarity_cv.py
src/base_classes/: __init__.py  base_loader.py  base_sampler.py  base_trainer.py
src/conf/: compute_dataset_stats.yaml  config.yaml  cross_validate_classifier.yaml  test_classifier.yaml  train_classifier.yaml  train_classifier_cv.yaml  train_classifier_optuna.yaml  train_similarity.yaml  train_similarity_cv.yaml
src/dataloaders/: stratified_k_fold_loader.py
src/datasets/: __init__.py  cifar10.py  (+2 more)
(+127 files in other folders)
