[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Marvin Theiss <marvin.theiss@psychol.uni-giessen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
einops = "^0.8.0"
hydra-core = "^1.3.2"
ipywidgets = "^8.1.3"
jupyterlab = "^4.1.2"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
python = "^3.9"
scipy = "^1.13.0"
seaborn = "^0.13.2"
tbparse = "^0.0.8"
tensorboard = "^2.17.0"
torch = "^2.4.0"
torchmetrics = "^1.4.0"
torchvision = "^0.19.0"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
