[project]
name = "rsa-vision-networks"
version = "1.0.1"
description = ""
authors = [
    {name = "Marvin Theiss",email = "marvin.theiss@psychol.uni-giessen.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "einops (>=0.8.0,<0.9.0)",
    "fast-soft-sort @ git+https://github.com/google-research/fast-soft-sort.git",
    "hydra-core (>=1.3.2,<2.0.0)",
    "ipywidgets (>=8.1.3,<9.0.0)",
    "jupyterlab (>=4.1.2,<5.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "notebook (>=7.2.2,<8.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "optuna (>=4.0.0,<5.0.0)",
    "optuna-dashboard (>=0.16.2,<0.17.0)",
    "pyfonts (>=0.0.1,<0.0.2)",
    "scikit-learn (>=1.5.1,<2.0.0)",
    "scipy (>=1.14.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tbparse (>=0.0.8,<0.0.9)",
    "tensorboard (>=2.17.0,<3.0.0)",
    "torch (>=2.4.0,<3.0.0)",
    "torchmetrics (>=1.4.0,<2.0.0)",
    "torchvision (>=0.19.0,<0.20.0)",
    "tqdm (>=4.66.4,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" }
]

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
